--- a/package.json
+++ b/package.json
@@ -10,17 +10,21 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.14",
+    "cors": "^2.8.5",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.4",
+    "express": "^4.18.2",
+    "firebase": "^9.21.0",
     "i18next": "^22.4.15",
     "jquery": "^3.6.4",
     "next": "13.3.4",
     "next-google-fonts": "^2.2.0",
     "postcss": "8.4.23",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-dom": "18.2.0",
     "react-i18next": "^12.2.2",
     "react-router": "^6.11.0",
+    "react-router-dom": "^6.11.1",
     "tailwindcss": "3.3.2",
     "typescript": "^5.0.4"
   }
